[fix] Get branch to build

--- a/ansible/roles/wordpress-builds/tasks/main.yml
+++ b/ansible/roles/wordpress-builds/tasks/main.yml
@@ -122,6 +122,7 @@
       type: Git
       git:
         uri: "https://github.com/epfl-si/wp-operator"
+        ref: "feature/allowFieldsUpdate"   # TODO: remove upon merging
     buildconfig_rebuild_tags:
     - wp.operator.rebuild
   tags:
