[refactor] Make `feature/wp-base-cloud-tekton-build` easier to un-hardcode

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -73,6 +73,8 @@
                         key: QUAY_API_BEARER_TOKEN
                 script: |
                     set -e -x
+                    cd /workspace/source/
+
                     if [ -n "$(params.explicit-stem)" ]; then
                       STEM="$(params.explicit-stem)"
                     else
