[feature] Build batch images as part of the Tekton pipeline
- Generalize the clone-then-try-to-change-branch approach
- Do the `sed(1)` on all Dockerfiles in sight

--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -148,14 +148,21 @@
                     if [ -z "$(params.branch-name)" ]; then
                       (cd wp-ops; git checkout "$(params.branch-name)" || true)
                     fi
+
+                    git clone https://github.com/epfl-si/wp-operator.git
+                    if [ -z "$(params.branch-name)" ]; then
+                      (cd wp-operator; git checkout "$(params.branch-name)" || true)
+                    fi
+
+                    dockerfiles="$(find . -name Dockerfile)"
                     sed -i "s;FROM quay-its.epfl.ch/svc0041/wp-base:rc;FROM {{ ansible_quay_hostname }}/{{ quay_organization }}/wp-base:$TAG;g" \
-                      /workspace/source/wp-ops/docker/*/Dockerfile
+                      $dockerfiles
                     sed -i "s;--from=quay-its.epfl.ch/svc0041/wp-base:rc;--from={{ ansible_quay_hostname }}/{{ quay_organization }}/wp-base:$TAG;g" \
-                      /workspace/source/wp-ops/docker/*/Dockerfile
+                      $dockerfiles
                     sed -i 's;FROM bitnami/nginx-ingress-controller:1.12.1;FROM {{ ansible_quay_hostname }}/{{ quay_organization }}/bitnami-nginx-ingress-controller:1.12.1;g' \
-                      /workspace/source/wp-ops/docker/*/Dockerfile
+                      $dockerfiles
                     sed -i 's;FROM ubuntu:jammy;FROM {{ ansible_quay_hostname }}/{{ quay_organization }}/ubuntu:jammy;g' \
-                      /workspace/source/wp-ops/docker/*/Dockerfile
+                      $dockerfiles
                     if [ -n "$(params.branch-name)" ]; then
                       echo "try_git_switch '$(params.branch-name)'" >> wp-ops/docker/wp-base/install-wordpress.sh
                     fi
@@ -235,6 +242,40 @@
                 value: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-php:$(tasks.prep.results.build-tag)"
               - name: CONTEXT
                 value: "wp-ops/docker/wordpress-php"
+              - name: VERBOSE
+                value: "true"
+            workspaces:
+              - name: source
+                workspace: shared-workspace
+              - name: dockerconfig
+                workspace: dockerconfig
+          - name: build-wp-cron
+            runAfter: [ build-wp-base ]
+            taskRef:
+              kind: Task
+              name: buildah
+            params:
+              - name: IMAGE
+                value: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-cron:$(tasks.prep.results.build-tag)"
+              - name: CONTEXT
+                value: "wp-ops/docker/wp-cron"
+              - name: VERBOSE
+                value: "true"
+            workspaces:
+              - name: source
+                workspace: shared-workspace
+              - name: dockerconfig
+                workspace: dockerconfig
+          - name: build-wp-operator
+            runAfter: [ build-wp-base ]
+            taskRef:
+              kind: Task
+              name: buildah
+            params:
+              - name: IMAGE
+                value: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-operator:$(tasks.prep.results.build-tag)"
+              - name: CONTEXT
+                value: "wp-operator"
               - name: VERBOSE
                 value: "true"
             workspaces:
