--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -131,7 +131,7 @@
                                                  | sort_by(.key)
                                                  | last
                                                  | if . == null then "'$STEM'-000" else .key end')"
-                                 num="$(echo "$last" | sed -n 's/.*-\([0-9][0-9]*\)$/\1/p')"
+                                 num="$(echo "$last" | sed -n 's/.*-0*\([1-9][0-9]*\)$/\1/p')"
                                  TAG="$(printf "%s-%03d" "$STEM" $((num + 1)))" ;;
                     esac
                     echo -n "$TAG" > $(results.build-tag.path)
