--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -144,8 +144,8 @@
                     if [ -n "$(kubectl get "$deploy" -o jsonpath="{ .metadata.annotations['self-service-fruit'] }")" ]; then
                       kubectl get "$deploy" -o jsonpath='{ range .spec.template.spec.containers[*]} {.image }{ "\n" }{ end }' | \
                         while read img; do case "$img" in
-                           *wp-nginx*) echo "$img" > $(results.retag-image-nginx.path) ;;
-                           *wp-php*) echo "$img" > $(results.retag-image-php.path) ;;
+                           *wp-nginx*) echo -n "$img" > $(results.retag-image-nginx.path) ;;
+                           *wp-php*) echo -n "$img" > $(results.retag-image-php.path) ;;
                         esac; done
                     fi
 
