--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -102,9 +102,9 @@
               results:
                 - name: build-tag
                   description: "The generated tag"
-                - name: retag-image-php
+                - name: tag-image-php-fruit
                   description: "The target name of the wp-php image to re-tag"
-                - name: retag-image-nginx
+                - name: tag-image-nginx-fruit
                   description: "The target name of the wp-nginx image to re-tag"
               steps:
               - name: sed
@@ -288,7 +288,7 @@
                 workspace: shared-workspace
               - name: dockerconfig
                 workspace: dockerconfig
-          - name: retag-wp-nginx
+          - name: tag-wp-nginx-fruit
             runAfter: [ build-wp-nginx ]
             when:
               - input: "$(tasks.prep.results.retag-image-nginx)"
@@ -306,7 +306,7 @@
             workspaces:
               - name: dockerconfig
                 workspace: dockerconfig
-          - name: retag-wp-php
+          - name: tag-wp-php-fruit
             runAfter: [ build-wp-php ]
             when:
               - input: "$(tasks.prep.results.retag-image-php)"
@@ -325,7 +325,7 @@
               - name: dockerconfig
                 workspace: dockerconfig
           - name: patch-and-rollout-deployment
-            runAfter: [ retag-wp-nginx, retag-wp-php ]
+            runAfter: [ tag-wp-nginx-fruit, tag-wp-php-fruit ]
             taskSpec:
               steps:
                 - name: patch-and-rollout
