[fix] `Always` be with you

--- a/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
+++ b/ansible/roles/wordpress-namespace/templates/nginx-deployment-spec.yaml
@@ -119,6 +119,7 @@
                 value: "menu-api"
           - name: php
             image: quay-its.epfl.ch/svc0041/wp-php:{{ image_tag }}
+            imagePullPolicy: {{ image_pull_policy | default("Always") }}
             resources:
 {% if inventory_deployment_stage == "production" %}
               limits:
