[refactor] Hoist `wp_base_builder_service_account` to top of role
- Rename to `build_service_account`, itself defined in `build-vars.yml`
- Creation of it now lives in the top-level `main.yml`

--- a/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
@@ -2,6 +2,7 @@
   include_vars: "{{ item }}"
   with_items:
     - ../../vars/versions.yml
+    - build-vars.yml
     - quay-vars.yml
     - kong-vars.yml
     - mirrors-vars.yml
@@ -376,7 +377,7 @@
                   - --privileged-service-account
                   - "{{ wp_base_builder_buildah_service_account }}"
                   - --unprivileged-service-account
-                  - "{{ wp_base_builder_service_account }}"
+                  - "{{ build_service_account }}"
                 imagePullPolicy: Always
                 resources:
                   limits:
